apps/home-assistant/music-assistant/music-assistant-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: music-assistant-server
  name: music-assistant-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: music-assistant-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: music-assistant-server
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/hostname: "rk1-4"
      containers:
        - env:
            - name: LOG_LEVEL
              value: info
          image: ghcr.io/music-assistant/server:latest
          name: music-assistant-server
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
                - DAC_READ_SEARCH
          volumeMounts:
            - mountPath: /data
              name: music-assistant
      restartPolicy: Always
      volumes:
        - name: music-assistant
          persistentVolumeClaim:
            claimName: music-assistant
