apps/home-assistant/music-assistant/Service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: music-assistant-server
spec:
  selector:
    io.kompose.service: music-assistant-server
  type: ClusterIP
  ports:
    - port: 8095
      name: music-assistant-api

      targetPort: 8095
