apps/home-assistant/music-assistant/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: music-assistant
  labels:
    io.kompose.service: music-assistant-server
spec:
  parentRefs:
  - name: https-gateway
    namespace: kube-system
  hostnames:
  - "music-assistant.camsab.me"
  rules:
  - backendRefs:
    - name: music-assistant-server
      port: 8095
